Rolling back to commit of last night